Se agrego reproductor mobile

--- a/html/reproductor.html
+++ b/html/reproductor.html
@@ -19,115 +19,89 @@
 				</a> -->
 			</div>
 			<div class="col-8 d-flex justify-content-center ajustar-col">
-				<h1 class="landing-title">HOME</h1>
+				<h1 class="landing-title">REPRODUCCIÓN</h1>
 			</div>
 			<div class="col-2 d-flex justify-content-center right-ajust">
 				<a href="buscar.html">
-                    <img class="img-fot-head-mob mr-3" src="../img/lupa_blanca.png">
+                    <img class="img-fot-head-mob ml-5" src="../img/lupa_blanca.png">
                 </a>
-                <a href="configuracion.html">
+                <!-- <a href="configuracion.html">
                     <img class="img-fot-head-mob" src="../img/ajustes.png">
-                </a>
+                </a> -->
 			</div>
 		</div>
 	</div>
 
-	<div class="container-mob d-block d-sm-none">
-
-        <div class="col-12 mt-1">
-            <h5 class="c-white">LO ULTIMO</h5>
-        </div>
-        <div class="carrousel-mob ml-3 mt-2">
-                <div class="card">
-                    <img class="max-h-w-card" src="../img/fiesta.jpg">
-                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                </div>
-                <div class="card">
-                    <img class="max-h-w-card" src="../img/fiesta.jpg">
-                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                </div>
-                <div class="card">
-                    <img class="max-h-w-card" src="../img/fiesta.jpg">
-                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                </div>
-                <div class="card">
-                    <img class="max-h-w-card" src="../img/fiesta.jpg">
-                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                </div>
-                <div class="card">
-                    <img class="max-h-w-card" src="../img/fiesta.jpg">
-                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                </div>
-        </div>  
-
-                <div class="col-12 mt-5">
-                    <h5 class="c-white">ESCUCHADAS RECIENTEMENTE</h5>
-                </div>
-                <div class="carrousel-mob ml-3 mt-2">
-                    <div class="card">
-                        <img class="max-h-w-card" src="../img/fiesta.jpg">
-                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                    </div>
-                    <div class="card">
-                        <img class="max-h-w-card" src="../img/fiesta.jpg">
-                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                    </div>
-                    <div class="card">
-                        <img class="max-h-w-card" src="../img/fiesta.jpg">
-                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                    </div>
-                    <div class="card">
-                        <img class="max-h-w-card" src="../img/fiesta.jpg">
-                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                    </div>
-                    <div class="card">
-                        <img class="max-h-w-card" src="../img/fiesta.jpg">
-                        <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                        <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                    </div>
-            </div>  
-
-            <div class="col-12 mt-5">
-                <h5 class="c-white">LO QUE MAS TE GUSTA</h5>
+	<div class="container-mob col-12 d-block d-sm-none">
+        <div class="row">
+            <div class="col-10 mt-1">
+                <h5 class="c-white text-center">REPRODUCIENDO DE ALBUM <br> HOMERUN</h5>
             </div>
-            <div class="carrousel-mob ml-3 mt-2">
-                <div class="card">
-                    <img class="max-h-w-card" src="../img/fiesta.jpg">
-                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
+            <div class="col-2 mt-1">
+                <a href="home.html">
+                    <img src="../img/volver-flecha.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <div class="col-10 mt-2">
+                <img class="img-repro-mob" src="../img/imgAlbum.jpg">
+            </div>
+            <div class="col-12 text-center d-flex justify-content-center align-items-center">
+                <div class="btn-group">
+                    <button class="btn btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img class="add-list" src="../img/agregar_a_lista.png" alt="">
+                    </button>
+                    <div class="dropdown-menu">
+                        <h6 class="c-white border-b">AGREGAR A:</h6>
+                        <ul class="pl-4">
+                            <li class="border-b">En el gym <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a> </li>
+                            <li class="border-b">Lentos <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                            <li class="border-b">Meditación <a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                            <li class="border-b">Fiesta<a href="#"><img class="left-playlist max-h-w" src="../img/agregar_a_lista.png" alt=""></a></li>
+                        </ul>
+                    </div>
+                  </div>
+                    <a class="font-weight-bold c-white" href="opiniones.html">OPINIONES</a>
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col-12">
+                <h4 class="c-white">Tal vez</h4>
+            </div>
+            <div class="col-6 d-flex align-items-center">
+               <h6 class="c-gray">PAULO LONDRA</h6> 
+            </div>
+            <div class="col-6 d-flex align-items-center">
+                <img class="max-star mb-1" src="../img/estrella_va.png" alt="">
+                <img class="max-star mb-1" src="../img/estrella_va.png" alt="">
+                <img class="max-star mb-1" src="../img/estrella_va.png" alt="">
+                <img class="max-star mb-1" src="../img/estrella_va.png" alt="">
+                <img class="max-star mb-1" src="../img/estrella_va.png" alt="">
+            </div>
+        </div>
+        <div class="row mt-1">
+            <div class="col-12">
+                <div class="line-gray mt-1">
+                    <div class="line-white"></div>
                 </div>
-                <div class="card">
-                    <img class="max-h-w-card" src="../img/fiesta.jpg">
-                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                </div>
-                <div class="card">
-                    <img class="max-h-w-card" src="../img/fiesta.jpg">
-                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                </div>
-                <div class="card">
-                    <img class="max-h-w-card" src="../img/fiesta.jpg">
-                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                </div>
-                <div class="card">
-                    <img class="max-h-w-card" src="../img/fiesta.jpg">
-                    <h6 class="card-title mt-1 c-white">De fiesta</h6>
-                    <p class="c-gray">Unete al party con <br> estos hits para darle <br> hasta que amanezca.</p>
-                </div>
-            </div>  
+            </div>
+        </div>
+        <div class="row mt-3 d-flex align-items-center">
+            <div class="col-2">
+                <img class="max-h-w" src="../img/compartir.png" alt="">
+            </div>
+            <div class="col-8 d-flex align-items-center justify-content-center">
+                <div class="col-2 d-flex justify-content-center"> <img class="ico-repr" src="../img/back.png" alt=""> </div>
+                <div class="col-3 d-flex justify-content-center"> <img class="ico-play" src="../img/play_mob.png" alt=""> </div>
+                <div class="col-2 d-flex justify-content-center"> <img class="ico-repr" src="../img/proximo.png" alt=""> </div>
+            </div>
+            <div class="col-2">
+                <img class="max-h-w" src="../img/corazon_blanco.png" alt="">
+            </div>
+        </div>
 	</div>
-
+    
 	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
 		<div class="row mt-2">
 			<div class="col-3 text-center">
