Se agrego efecto de transicion en el reproductor desktop y mobile

--- a/html/reproductor.html
+++ b/html/reproductor.html
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 
-	<div class="container-mob col-12 d-block d-sm-none">
+	<div class="container-mob col-12 d-block d-sm-none animado">
         <div class="row">
             <div class="col-10 mt-1">
                 <h5 class="c-white text-center">REPRODUCIENDO DE ALBUM <br> HOMERUN</h5>
@@ -193,7 +193,7 @@
         </div>
     </div>
 
-    <div class="homeDesk col-12 d-none d-sm-block">
+    <div class="homeDesk col-12 d-none d-sm-block animado">
         <!-- NAVSIDE -->
         <div class="row">
             <div class="col-2">
