fixed several things

--- a/html/home.html
+++ b/html/home.html
@@ -358,7 +358,9 @@
                             </div>
 
                             <div class="card col-3">
+                                <a href="reproductor.html">
                                 <img src="../img/this_paulo.jpg" class="efecto-hover mt-2" width="80%" height="45%">
+                                </a>
                                     <h5 class="card-title mt-1 c-white">Paulo Londra</h5>
                                     <p class="c-gray">Unete al party con estos hits para darle hasta que amanezca.</p>
                             </div>
@@ -913,7 +915,9 @@
                     </div>
                     <div class="col-6">
                         <div class="row">
-                            <h6 class="c-white ml-1 mt-1">Tal vez</h6>
+                            <a href="reproductor.html">
+                                <h6 class="c-white ml-1 mt-1">Tal vez</h6>
+                            </a>
                             <button class="btn-like ml-3 mt-1" id="btnLike">
                                 <img id="imgCorazon" src="../img/corazon_blanco.png" alt="like">
                             </button>
