--- a/html/biblioteca.html
+++ b/html/biblioteca.html
@@ -650,7 +650,9 @@
                             </div>
                             <div class="col-6">
                                 <div class="row">
-                                    <h6 class="c-white ml-1 mt-1">Tal vez</h6>
+                                    <a href="reproductor.html">
+                                        <h6 class="c-white ml-1 mt-1">Tal vez</h6>
+                                    </a>
                                     <button class="btn-like ml-3 mt-1" id="btnLike">
                                         <img id="imgCorazon" src="../img/corazon_blanco.png" alt="like">
                                     </button>
