--- a/html/reproductor.html
+++ b/html/reproductor.html
@@ -181,7 +181,7 @@
                             <img class="max-h-w" src="../img/usuario.png" width="100%" height="100%">
                         </a>
                     </div>  
-                    <span class="span-user d-flex flex-column mr-1">John86</span>
+                    <span class="span-user c-gray d-flex flex-column mr-1">John86</span>
                 </div>
                 <div>
                     <button class="btn btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -709,13 +709,15 @@
                 <div class="col-3 pl-0">
                     <div class="row">
                         <div class="col-6">
-                        <a href="reproductor.html">
-                            <img  src="../img/imgAlbum.jpg" alt="album" width="100%" height="118px">
-                        </a>
+                            <a href="reproductor.html">
+                                <img src="../img/imgAlbum.jpg" alt="album" width="100%" height="118px">
+                            </a>
                         </div>
                         <div class="col-6">
                             <div class="row">
-                                <h6 class="c-white ml-1 mt-1">Tal vez</h6>
+                                <a href="reproductor.html">
+                                    <h6 class="c-white ml-1 mt-1">Tal vez</h6>
+                                </a>
                                 <button class="btn-like ml-3 mt-1" id="btnLike">
                                     <img id="imgCorazon" src="../img/corazon_blanco.png" alt="like">
                                 </button>
