se agrego mini reproductor mobile

--- a/html/biblioteca.html
+++ b/html/biblioteca.html
@@ -164,11 +164,26 @@
 
 	</div>
 
-	<div class="footer-mob col-12 d-block d-sm-none d-flex align-items-center justify-content-center">
-		<div class="row mt-2">
+	<div class="footer-mob col-12 d-block d-sm-none justify-content-center">
+        <div class="row repro-h">
+            <a href="reproductor.html">
+                 <img class="img-repro-mob" src="../img/imgAlbum.jpg" alt="">
+            </a>
+                <div class="ml-1">
+                    <h6 class="c-white">Tal vez</h6>
+                    <p class="c-white">PAULO LONDRA</p>
+                </div>
+                <div class="ajustar-repr">
+                    <img class="ico-next" src="../img/back.png" alt="">
+                    <img class="ico-play ml-2 mr-2" src="../img/play_mob.png" alt="">
+                    <img class="ico-next" src="../img/proximo.png" alt="">
+                </div>
+        </div>
+
+		<div class="row mt-2 d-flex align-items-center justify-content-center">
 			<div class="col-3 text-center">
 				<a href="home.html">
-					<img class="img-fot-head-mob" src="../img/hogar.png" alt="">
+                    <img class="img-fot-head-mob" src="../img/hogar.png" alt="">
 				</a>
 				<p class="c-ico d-flex justify-content-center p-small">HOME</p>
 			</div>
