added search resutls

--- a/html/explorar.html
+++ b/html/explorar.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/explorar.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Spoiler five</title>
 </head>
 
@@ -257,8 +258,25 @@
                 </a>
             </div>
            <div class="col-6 d-sm-flex align-items-center">
-                <img class="ajustarLupa" src="../img/lupa.png" alt="search" width="5%" height="38%">  
-                <input class="searchDesk" placeholder="Artistas, Canciones, Podcasts" type="text">   
+            <img class="ajustarLupa" src="../img/lupa.png" alt="search" width="5%" height="38%">  
+            <input class="searchDesk" placeholder="Artistas, Canciones, Podcasts" type="text"> 
+            <div class="search-results d-none">
+                <a href="result-busqueda.html">
+                    <div class="search-result">
+                        Tal vez, Paulo Londra, Homerun
+                    </div>      
+                </a>
+                <a href="result-busqueda.html">
+                    <div class="search-result">
+                        Maldición, Paulo Londra, Homerun
+                    </div>      
+                </a>
+                <a href="result-busqueda.html">
+                    <div class="search-result">
+                        Adán y Eva, Paulo Londra, Homerun
+                    </div>      
+                </a>
+            </div>
            </div>
            <div class="col-4 text-center d-sm-flex align-items-center justify-content-end pl-2"> 
                 <div>
@@ -673,9 +691,8 @@
             </div>
         </div>
     <!-- FIN OCULTO SOLO EN XS     desktop -->
-
-
     <script src="../js/explorar.js"></script>
+    <script src="../js/search.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
     </script>
