--- a/html/reproductor.html
+++ b/html/reproductor.html
@@ -419,17 +419,17 @@
                     <div class="col-12 canciones-table d-flex align-items-center">
                         <div class="col-2">
                             <a href="#">
-                                <img src="../img/play.png" alt="" class="play-image">
+                                <img src="../img/pause-active.png" alt="" class="pause-image">
                             </a>
                         </div>
                         <div class="col-8 d-flex align-items-center">
                             <div class="col-10 pl-0">
-                                <h3 class="c-white list-song-title">Tal vez</h3>
+                                <h3 class="list-song-title c-lBlue">Tal vez</h3>
                             </div>
                             <div class="col-2">
                                 <div class="btn-group">
                                     <button class="btn btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <img class="add-list" src="../img/agregar_a_lista.png" alt="">
+                                    <img class="add-list" src="../img/add-to-playlist-active.png" alt="">
                                     </button>
                                     <div class="dropdown-menu">
                                         <h6 class="c-white border-b">AGREGAR A:</h6>
@@ -444,11 +444,11 @@
                             </div>
                         </div>
                         <div class="col-2 d-flex text-center justify-content-center ">
-                            <h3 class="c-white list-song-title">3' 57''</h3>
+                            <h3 class="c-lBlue list-song-title">3' 57''</h3>
                         </div>
                     </div>
                     <div class="col-12 canciones-table d-flex align-items-center">
-                        <div class="col-2">
+                        <div class="col-2 ml-1">
                             <a href="#">
                                 <img src="../img/play.png" alt="" class="play-image">
                             </a>
@@ -479,7 +479,7 @@
                         </div>
                     </div>
                     <div class="col-12 canciones-table d-flex align-items-center">
-                        <div class="col-2">
+                        <div class="col-2 ml-1">
                             <a href="#">
                                 <img src="../img/play.png" alt="" class="play-image">
                             </a>
@@ -510,7 +510,7 @@
                         </div>
                     </div>
                     <div class="col-12 canciones-table d-flex align-items-center">
-                        <div class="col-2">
+                        <div class="col-2 ml-1">
                             <a href="#">
                                 <img src="../img/play.png" alt="" class="play-image">
                             </a>
@@ -541,7 +541,7 @@
                         </div>
                     </div>
                     <div class="col-12 canciones-table d-flex align-items-center">
-                        <div class="col-2">
+                        <div class="col-2 ml-1">
                             <a href="#">
                                 <img src="../img/play.png" alt="" class="play-image">
                             </a>
@@ -572,14 +572,14 @@
                         </div>
                     </div>
                     <div class="col-12 canciones-table d-flex align-items-center">
-                        <div class="col-2">
+                        <div class="col-2 ml-1">
                             <a href="#">
                                 <img src="../img/play.png" alt="" class="play-image">
                             </a>
                         </div>
                         <div class="col-8 d-flex align-items-center">
                             <div class="col-10 pl-0">
-                                <h3 class="c-white list-song-title">Tal vez</h3>
+                                <h3 class="c-white list-song-title">Tal vez Remix </h3>
                             </div>
                             <div class="col-2">
                                 <div class="btn-group">
@@ -603,7 +603,7 @@
                         </div>
                     </div>
                     <div class="col-12 canciones-table d-flex align-items-center">
-                        <div class="col-2">
+                        <div class="col-2 ml-1">
                             <a href="#">
                                 <img src="../img/play.png" alt="" class="play-image">
                             </a>
@@ -634,7 +634,7 @@
                         </div>
                     </div>
                     <div class="col-12 canciones-table d-flex align-items-center">
-                        <div class="col-2">
+                        <div class="col-2 ml-1">
                             <a href="#">
                                 <img src="../img/play.png" alt="" class="play-image">
                             </a>
@@ -665,7 +665,7 @@
                         </div>
                     </div>
                     <div class="col-12 canciones-table d-flex align-items-center">
-                        <div class="col-2">
+                        <div class="col-2 ml-1" >
                             <a href="#">
                                 <img src="../img/play.png" alt="" class="play-image">
                             </a>
@@ -716,7 +716,8 @@
                         <div class="col-6">
                             <div class="row">
                                 <a href="reproductor.html">
-                                    <h6 class="c-white ml-1 mt-1">Tal vez</h6>
+                                    <h6 class="c-white ml-1 mt-1">Tal vez
+                                    </h6>
                                 </a>
                                 <button class="btn-like ml-3 mt-1" id="btnLike">
                                     <img id="imgCorazon" src="../img/corazon_blanco.png" alt="like">
