--- a/html/result-busqueda.html
+++ b/html/result-busqueda.html
@@ -228,9 +228,9 @@
 		<div class="row">
 			<div class="col-2">
 				<div class="fixed">
-					<div class="row title-nav">
+					<div class="row title-nav pt-2">
 						<h4 class="c-lBlue text-center">RESULTADO <br> PRINCIPAL</h4>
-							<div class="line mt-4 w-75"></div>
+							<div class="line mt-3 w-75"></div>
 					</div>
 					<div class="row navs">
 						<div class="col-4 mt-4 d-flex justify-content-center">
@@ -239,7 +239,7 @@
 						<h4 class="c-white">PAULO LONDRA</h4>
 					</div>
 
-					<div class="row navs c-ico">
+					<div class="row navs hem c-ico">
 						<div class="col-12 text-center">
 							<h5 class="c-gray mt-2">ARTISTA</h5>
 							<h6 class="c-gray mt-2">780.000 SEGUIDORES</h6>
@@ -264,11 +264,11 @@
 			<!-- CARROUSELES -->
 			<div class="col-10">
 				<div class="row">
-					<h3 class="ml-3 c-white">PAULO LONDRA</h3>
+					<h3 class="ml-3 mb-3 c-white">PAULO LONDRA</h3>
 				</div>
-				<div class="row mt-2 d-flex justify-content-center">
+				<div class="row mt-2 mb-2 d-flex ml-2 justify-content-start">
 					<div class="top-5-canciones d-flex align-items-center">
-						<h4 class="pl-2">Top 5 de canciones</h4>
+						<h4 class="pl-2">Top 5 canciones</h4>
 					</div>
 					<div class="canciones d-flex align-items-center">
 						<div class="col-10">
