--- a/html/biblioteca.html
+++ b/html/biblioteca.html
@@ -7,6 +7,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/biblioteca.css">
     <link rel="stylesheet" href="../css/vote.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Spoiler five</title>
 </head>
 <body>
@@ -29,7 +30,6 @@
 			</div>
 		</div>
 	</div>
-
     <div class="container-mob d-block d-sm-none">
         <div class="row">
             <div class="col-9">
@@ -205,8 +205,25 @@
                 </a>
             </div>
            <div class="col-6 d-sm-flex align-items-center">
-                <img class="ajustarLupa" src="../img/lupa.png" alt="search" width="5%" height="38%">  
-                <input class="searchDesk" placeholder="Artistas, Canciones, Podcasts" type="text">   
+            <img class="ajustarLupa" src="../img/lupa.png" alt="search" width="5%" height="38%">  
+            <input class="searchDesk" placeholder="Artistas, Canciones, Podcasts" type="text"> 
+            <div class="search-results d-none">
+                <a href="result-busqueda.html">
+                    <div class="search-result">
+                        Tal vez, Paulo Londra, Homerun
+                    </div>      
+                </a>
+                <a href="result-busqueda.html">
+                    <div class="search-result">
+                        Maldición, Paulo Londra, Homerun
+                    </div>      
+                </a>
+                <a href="result-busqueda.html">
+                    <div class="search-result">
+                        Adán y Eva, Paulo Londra, Homerun
+                    </div>      
+                </a>
+            </div>
            </div>
            <div class="col-4 text-center d-sm-flex align-items-center justify-content-end pl-2"> 
                 <div>
@@ -723,6 +740,7 @@
             </section>
     <script src="../js/biblioteca.js"></script>
     <script src="../js/voting.js"></script>
+    <script src="../js/search.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
