added voting cookies

--- a/html/home.html
+++ b/html/home.html
@@ -1008,7 +1008,7 @@
 				</div>
 			</div>
 			<div class="comment-main-container">
-				<textarea name="" class="comment-area" cols="40" rows="10" placeholder="Ingrese su comentario aquí"></textarea>
+				<textarea id="comment-content" name="" class="comment-area" cols="40" rows="10" placeholder="Ingrese su comentario aquí"></textarea>
 			</div>
 			<div class="comments-footer-container ">
                 <button type="button" id="vote" class="btn access-button">
