--- a/html/reproductor.html
+++ b/html/reproductor.html
@@ -279,18 +279,18 @@
                                     </div> 
                                 </div>
                                 <div class="col-sm-7 p-2">
-                                        <p class="comment-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                                        <p id="user-comment-text" class="comment-text"> </p>
                                 </div>
                                 <div class="col-sm-3 p-2">
                                     <div class="vote-text-mini">
                                         Calificacion
                                     </div>
                                     <div class="star-container-mini">
-                                        <img  src="../img/estrella.png" class="star-mini" alt="star">
-                                        <img  src="../img/estrella.png" class="ml-2 star-mini" alt="star">
-                                        <img  src="../img/estrella.png" class="ml-2 star-mini" alt="star">
-                                        <img  src="../img/estrella_va.png" class="ml-2 star-mini"  alt="star">
-                                        <img  src="../img/estrella_va.png" class="mr-2 ml-2 star-mini" alt="star">
+                                        <img  src="../img/estrella_va.png" class="star-mini star-voted" alt="star">
+                                        <img  src="../img/estrella_va.png" class="ml-2 star-mini star-voted" alt="star">
+                                        <img  src="../img/estrella_va.png" class="ml-2 star-mini star-voted" alt="star">
+                                        <img  src="../img/estrella_va.png" class="ml-2 star-mini star-voted"  alt="star">
+                                        <img  src="../img/estrella_va.png" class="mr-2 ml-2 star-mini star-voted" alt="star">
                                     </div>
                                 </div>       
                             </div>
@@ -763,6 +763,7 @@
 </section>
 <script src="../js/reproductor.js"></script>
 <script src="../js/voting.js"></script>
+<script src="../js/comments.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
