arreglado sign up

--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -123,15 +123,17 @@
                                 </div>
                             </div>
                             <div  class="input-container col-sm-8 offset-md-2" >
-                                <button type="button" class="btn access-button">
-                                    REGISTRARSE
-                                </button>
+                                <a href="../html/home.html">
+                                    <button type="button" class="btn access-button">
+                                        REGISTRARSE
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div class="d-none d-sm-flex col-sm-4 offset-md-4 back-button">
-                        <a href="../index.html">
-                            <button type="button" class="btn access-button">
+                        <a href="../index.html " class="volver-button">
+                            <button type="button" class="btn access-button ">
                                 VOLVER
                             </button>
                         </a>
