Se agrego mejora en footer y efecto load en boton enviar comentario

--- a/html/home.html
+++ b/html/home.html
@@ -918,8 +918,8 @@
                                 <img id="imgCorazon" src="../img/corazon_blanco.png" alt="like">
                             </button>
                         </div>
-                        <div class="row">
-                            <p class="ml-1 mt-5 mb-0 c-white">Paulo londra</p>
+                        <div class="row mt-3">
+                            <p class="ml-1 mt-4 mb-0 c-white">Paulo londra</p>
                         </div>
                     </div>
                 </div>
@@ -931,12 +931,15 @@
                         <img class="mr-4 ml-4 img-play" src="../img/play.png" width="8%" height="100%">
                         <img class="img-next-back" src="../img/proximo.png" alt="next"  width="2%" height="40%">
 
+                        <div class="sound">
+                        <img src="../img/sonido-musical.png" alt="sonido" height="22px">
+                        </div>
                     </div>
                 </div>
-                    <div class="col-12 d-flex justify-content-end">
+                    <!-- <div class="col-12 d-flex justify-content-end">
                         <img src="../img/sonido-musical.png" alt="sonido" height="22px">
-                    </div>
-                <div class="row">
+                    </div> -->
+                <div class="row mt-3">
                     <div class="reproductor col-12 pl-0 mt-1">
                         <div class="w-100 h-100 bg-white col-8">
                         </div>
@@ -945,11 +948,11 @@
             </div>
             <div class="col-md-3">
                 <div class="row h-100">
-                    <div class="col-sm-12 mt-4 mb-3 vote-container">
+                    <div class="col-sm-12 mt-4 mb-5 vote-container">
                         <div class="vote-text">
-                            Califica este audio
+                            <h5>CALIFICA ESTE AUDIO</h5>
                         </div>
-                        <div class="star-container">
+                        <div class="ml-3 star-container">
                             <img  src="../img/estrella_va.png" class="star" alt="star">
                             <img  src="../img/estrella_va.png" class="ml-2 star" alt="star">
                             <img  src="../img/estrella_va.png" class="ml-2 star" alt="star">
